added gif printer for presentation

--- a/project/presentation.ipynb
+++ b/project/presentation.ipynb
@@ -24,6 +24,7 @@
     "import math\n",
     "import IPython.display as display\n",
     "import os\n",
+    "import matplotlib.animation as animation\n",
     "\n",
     "from classes import *\n",
     "from tqdm import tqdm\n",
@@ -85,9 +86,9 @@
    "outputs": [],
    "source": [
     "# Loops\n",
-    "plt.rcParams[\"figure.figsize\"] = [10, 5]\n",
+    "plt.rcParams[\"figure.figsize\"] = [5, 5]\n",
     "# set dpi to 500\n",
-    "plt.rcParams[\"figure.dpi\"] = 500\n",
+    "#plt.rcParams[\"figure.dpi\"] = 500\n",
     "env = gym.make(\n",
     "    \"MiniHack-Navigation-Custom-v0\",\n",
     "    observation_keys=(\"chars\", \"pixel\"),\n",
@@ -98,7 +99,7 @@
     "game_map = state[\"chars\"]  # type: ignore\n",
     "game = state[\"pixel\"]  # type: ignore\n",
     "# env.render()\n",
-    "plt.imshow(state[\"pixel\"], aspect=\"auto\").set_data(state[\"pixel\"][:, 300:950])  # type: ignore"
+    "plt.imshow(state[\"pixel\"], aspect=\"auto\").set_data(state[\"pixel\"][112:220, 545:687])  # type: ignore"
    ]
   },
   {
@@ -111,10 +112,17 @@
     "# action_map = {\"N\": 0, \"E\": 1, \"S\": 2, \"W\": 3}\n",
     "# generic loop: 1, 1, 0, 0, 3, 3, 2, 2\n",
     "\n",
+    "\n",
+    "\n",
+    "state = env.reset()\n",
     "plt.rcParams[\"figure.figsize\"] = [5, 5]\n",
+    "\n",
+    "fig = plt.figure()\n",
     "\n",
     "image = plt.imshow(game[110:220, 540:690])\n",
     "actions = [1, 0, 1, 1, 0, 0, 3, 3, 2, 2]\n",
+    "\n",
+    "ims = []\n",
     "\n",
     "for i, action in enumerate(actions):\n",
     "    try:\n",
@@ -122,9 +130,16 @@
     "        display.display(plt.gcf())\n",
     "        display.clear_output(wait=True)\n",
     "        image.set_data(s[\"pixel\"][110:220, 540:690])\n",
+    "        im = plt.imshow(s[\"pixel\"][110:220, 540:690], animated=True)\n",
+    "        ims.append([im])\n",
     "        # time.sleep(0.1)\n",
     "    except RuntimeError:\n",
-    "        print(\"YOU WON! <3\")"
+    "        print(\"YOU WON! <3\")\n",
+    "\n",
+    "\n",
+    "ani = animation.ArtistAnimation(fig, ims, interval=500, blit=True,\n",
+    "                                repeat_delay=200)\n",
+    "ani.save(\"demo2.gif\", writer='help')"
    ]
   },
   {
@@ -138,8 +153,14 @@
     "\n",
     "state = env.reset()\n",
     "plt.rcParams[\"figure.figsize\"] = [5, 5]\n",
+    "#plt.title(f\"Loops: 0\")\n",
+    "ttl = plt.text(0.5, 1.01, f\"Loops: 0\", horizontalalignment='center', verticalalignment='bottom', transform=ax.transAxes)\n",
     "\n",
-    "image = plt.imshow(game[110:220, 540:690])\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111)\n",
+    "ims = []\n",
+    "\n",
+    "image = plt.imshow(game[112:220, 545:687])\n",
     "actions = [1, 0, 1, 1, 0, 0, 3, 3, 2, 2, 3, 0, 0, 2]\n",
     "\n",
     "for i, action in enumerate(actions):\n",
@@ -147,15 +168,26 @@
     "        s, _, _, _ = env.step(action)\n",
     "        display.display(plt.gcf())\n",
     "        display.clear_output(wait=True)\n",
-    "        image.set_data(s[\"pixel\"][110:220, 540:690])\n",
+    "        #image.set_data(s[\"pixel\"][110:220, 540:690])\n",
     "        if i < 9:\n",
-    "            plt.title(f\"Loops: 0\")\n",
+    "            ttl = plt.text(0.5, 1.01, f\"Loops: 0\", horizontalalignment='center', verticalalignment='bottom', transform=ax.transAxes)\n",
+    "            #plt.title(f\"Loops: 0\")\n",
     "        elif i < 13:\n",
-    "            plt.title(f\"Loops: 1\")\n",
+    "            ttl = plt.text(0.5, 1.01, f\"Loops: 1\", horizontalalignment='center', verticalalignment='bottom', transform=ax.transAxes)\n",
+    "            #plt.title(f\"Loops: 1\")\n",
     "        else:\n",
-    "            plt.title(f\"Loops: 2\")\n",
+    "            ttl = plt.text(0.5, 1.01, f\"Loops: 2\", horizontalalignment='center', verticalalignment='bottom', transform=ax.transAxes)\n",
+    "            #plt.title(f\"Loops: 2\")\n",
+    "\n",
+    "        im = plt.imshow(s[\"pixel\"][112:220, 545:687])\n",
+    "        ims.append([im, ttl])\n",
+    "        \n",
     "    except RuntimeError:\n",
-    "        print(\"YOU WON! <3\")"
+    "        print(\"YOU WON! <3\")\n",
+    "\n",
+    "ani = animation.ArtistAnimation(fig, ims, interval=500, blit=False,\n",
+    "                                repeat_delay=200)\n",
+    "ani.save(\"loop.gif\", writer='help')"
    ]
   },
   {
@@ -165,6 +197,8 @@
    "outputs": [],
    "source": [
     "# Dead ends\n",
+    "\n",
+    "\n",
     "plt.rcParams[\"figure.figsize\"] = [10, 5]\n",
     "# set dpi to 500\n",
     "plt.rcParams[\"figure.dpi\"] = 500\n",
@@ -189,9 +223,17 @@
     "# action_map = {\"N\": 0, \"E\": 1, \"S\": 2, \"W\": 3}\n",
     "# dead-end: 0, 0, 1, 1, 1, 3, 3, 3, 0\n",
     "\n",
+    "state = env.reset()\n",
     "plt.rcParams[\"figure.figsize\"] = [5, 5]\n",
+    "#plt.title(f\"Loops: 0\")\n",
+    "#ttl = plt.text(0.5, 1.01, f\"Loops: 0\", horizontalalignment='center', verticalalignment='bottom', transform=ax.transAxes)\n",
     "\n",
-    "image = plt.imshow(game[110:220, 540:690])\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111)\n",
+    "ims = []\n",
+    "\n",
+    "image = plt.imshow(game[112:220, 545:687])\n",
+    "\n",
     "actions = [0, 0, 1, 1, 1, 3, 3, 3, 0]\n",
     "\n",
     "for i, action in enumerate(actions):\n",
@@ -201,8 +243,14 @@
     "        display.clear_output(wait=True)\n",
     "        image.set_data(s[\"pixel\"][110:220, 540:690])\n",
     "        # time.sleep(0.1)\n",
+    "        im = plt.imshow(s[\"pixel\"][112:220, 545:687])\n",
+    "        ims.append([im, ttl])\n",
     "    except RuntimeError:\n",
-    "        print(\"YOU WON! <3\")"
+    "        print(\"YOU WON! <3\")\n",
+    "\n",
+    "ani = animation.ArtistAnimation(fig, ims, interval=500, blit=False,\n",
+    "                                repeat_delay=200)\n",
+    "ani.save(\"culdesac.gif\", writer='help')"
    ]
   },
   {
@@ -233,9 +281,19 @@
    "outputs": [],
    "source": [
     "# Wrong actions animation\n",
+    "state = env.reset()\n",
     "plt.rcParams[\"figure.figsize\"] = [5, 5]\n",
+    "#plt.title(f\"Loops: 0\")\n",
+    "#ttl = plt.text(0.5, 1.01, f\"Loops: 0\", horizontalalignment='center', verticalalignment='bottom', transform=ax.transAxes)\n",
     "\n",
-    "image = plt.imshow(game[110:220, 540:690])\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111)\n",
+    "ims = []\n",
+    "\n",
+    "image = plt.imshow(game[112:220, 545:687])\n",
+    "#ttl = plt.text(0.5, 1.01, f\"Wrong actions: 0\", horizontalalignment='center', verticalalignment='bottom', transform=ax.transAxes)\n",
+    "\n",
+    "\n",
     "actions = [0, 0, 0, 0, 0, 0, 0, 0]\n",
     "\n",
     "for i, action in enumerate(actions):\n",
@@ -246,11 +304,20 @@
     "        image.set_data(s[\"pixel\"][110:220, 540:690])\n",
     "        # time.sleep(0.1)\n",
     "        if i > 4:\n",
-    "            plt.title(f\"Wrong actions: {i-4}\")\n",
+    "            ttl = plt.text(0.5, 1.01, f\"Wrong actions: {i-4}\", horizontalalignment='center', verticalalignment='bottom', transform=ax.transAxes)\n",
+    "            #plt.title(f\"Wrong actions: {i-4}\")\n",
     "        else:\n",
-    "            plt.title(f\"Wrong actions: 0\")\n",
+    "            ttl = plt.text(0.5, 1.01, f\"Wrong actions: 0\", horizontalalignment='center', verticalalignment='bottom', transform=ax.transAxes)\n",
+    "            #plt.title(f\"Wrong actions: 0\")\n",
+    "\n",
+    "        im = plt.imshow(s[\"pixel\"][112:220, 545:687])\n",
+    "        ims.append([im, ttl])\n",
     "    except RuntimeError:\n",
-    "        print(\"YOU WON! <3\")"
+    "        print(\"YOU WON! <3\")\n",
+    "\n",
+    "ani = animation.ArtistAnimation(fig, ims, interval=500, blit=False,\n",
+    "                                repeat_delay=200)\n",
+    "ani.save(\"wrong.gif\", writer='help')"
    ]
   },
   {
