added valid action generato though KB, wrote more about kb in the notebook

--- a/project/main.ipynb
+++ b/project/main.ipynb
@@ -262,12 +262,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will use nth1 to control the validity of a specific position of the maze though Prolog, to assert is a specific move is valid or not."
+    "We will use nth1 to control the validity of a specific position of the maze though Prolog, to assert if a specific cell is valid or not. This will be also used later to check for valid actions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -275,147 +275,147 @@
      "output_type": "stream",
      "text": [
       "Cell value: 0\n",
-      "Position is not valid.\n",
-      "[{'ROW': 16, 'COL': 23}] [{}] [{}] [{}] [{}]\n"
+      "Position is valid.\n"
      ]
     }
    ],
    "source": [
-    "result = list(KB.query(\"maze(M), nth1(13, M, Row), nth1(25, Row, Cell)\"))\n",
+    "result = list(KB.query(\"maze(M), nth1(17, M, Row), nth1(24, Row, Cell)\"))\n",
     "if result:\n",
     "    cell_value = result[0][\"Cell\"]  # type: ignore\n",
     "    print(f\"Cell value: {cell_value}\")\n",
     "else:\n",
     "    print(\"Query result is empty.\")\n",
     "\n",
-    "solution = list(KB.query(f\"is_valid(14,25)\"))\n",
+    "solution = list(KB.query(f\"is_valid(17,24)\"))\n",
     "if solution:\n",
     "    print(\"Position is valid.\")\n",
     "else:\n",
-    "    print(\"Position is not valid.\")\n",
-    "\n",
-    "l1 = list(KB.query(\"start(ROW,COL)\"))\n",
-    "l2 = list(KB.query(f\"is_valid(9,23)\"))\n",
-    "l3 = list(KB.query(f\"is_valid(9,23)\"))\n",
-    "l4 = list(KB.query(f\"is_valid_action(11,23,0)\"))\n",
-    "l5 = list(KB.query(f\"is_valid_action(10,23,0)\"))\n",
-    "print(l1, l2, l3, l4, l5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "possible_actions = [0,1,2,3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "row = 9\n",
-    "col = 28"
+    "    print(\"Position is not valid.\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we define a query that returns the ValidActions for a given position (row, col).\n",
-    "At first, we call the function findall(+Templates, :Goal, -Bag) of Prolog that creates a list of the instantiations Template and gets successively on backtracking over Goal and unify the result with Bag. In this case: it starts assuming that is_valid_action() is True, and then it searches for the inputs that made it True. Secondarly, we rename Actions to ValidActions using the Prolog function intersection(+Set1, +Set2, -Set3).\n",
+    "# Findall\n",
+    "\n",
+    "In Prolog, findall/3 is a built-in predicate that is used to find all solutions to a query and collect them into a list. The general form of the findall/3 predicate is:\n",
+    "\n",
+    "```Prolog\n",
+    "findall(+Template, +Goal, -Bag)\n",
+    "```\n",
+    "\n",
+    "Template: It represents a template for the solutions. The variables in the template are instantiated with the values of the corresponding variables in the solutions.\n",
+    "\n",
+    "Goal: It is a goal (query) to be satisfied. findall/3 collects all solutions to this goal.\n",
+    "\n",
+    "Bag: It is the list that will contain all the solutions found.\n",
+    "\n",
+    "\n",
+    "We then rename Actions to ValidActions using the Prolog function intersection(+Set1, +Set2, -Set3).\n",
     "\n",
     "N.B.  the search is done for Action = 0,1,2,3 since in kb.pl 'is_valid_action' is constructed from action_to_coordinates which gives these 4 values for Action."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query_string = f\"findall(Action, is_valid_action({row+1}, {col+1}, Action), Actions), intersection(Actions, {possible_actions}, ValidActions)\"\n",
-    "\n",
-    "results = list(KB.query(query_string))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'Action': Variable(72), 'Actions': [0, 2], 'ValidActions': [0, 2]}]\n"
+      "[{'Action': Variable(72), 'Actions': [1, 2, 3], 'ValidActions': [1, 2, 3]}]\n"
      ]
     }
    ],
    "source": [
+    "possible_actions = [0,1,2,3]\n",
+    "row = 16\n",
+    "col = 23\n",
+    "query_string = f\"findall(Action, is_valid_action({row+1}, {col+1}, Action), Actions), intersection(Actions, {possible_actions}, ValidActions)\"\n",
+    "results = list(KB.query(query_string))\n",
     "print(results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "# Here we print just ValidActions\n",
     "valid_actions_result = results[0]['ValidActions'] # type: ignore\n",
-    "\n",
     "print(valid_actions_result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# We check with the NON-PROLOG function if the result is correct\n",
     "get_valid_actions(game_map.layout,  (row, col))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# We check if 1 is not correct, i.e., there is a wall on the right (East)\n",
-    "print(is_wall(game_map.layout[row, col+1]))"
+    "# Using the KB to make an Informed Genetic Algorithm\n",
+    "\n",
+    "Once we have all the bits, we can create all our pillar function that will be used in the genetic algorithm and in the fitness function. In particular we will be using the following main function as building blocks.\n",
+    "\n",
+    "```Python\n",
+    "    is_wall_kb()\n",
+    "    path_from_actions_kb()\n",
+    "    random_nvalid_actions_kb()\n",
+    "```\n",
+    "\n",
+    "which will compute the prolog queries states above to, respectively:\n",
+    "- assert if a cell is valid\n",
+    "- generate a path from a list of action, for each action we will check its validity\n",
+    "- generate a list of valid action from the starting cell\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for i in range(len(game_map.map_matrix)): # type: ignore\n",
-    "#     for j in range(len(game_map.map_matrix[0])): # type: ignore\n",
-    "#         result = list(KB.query(f\"maze(M), nth1({i+1}, M, Row), nth1({j+1}, Row, Cell)\"))\n",
-    "#         if result:\n",
-    "#             cell_value = result[0][\"Cell\"]  # type: ignore\n",
-    "#             if game_map.map_matrix[i][j] != cell_value:\n",
-    "#                 #print(f'{i+1},{j+1} is valid')\n",
-    "#             #else: \n",
-    "#                 #print(f'{i+1},{j+1} is not valid, ERROR!!!!!')\n",
-    "#                 break\n",
-    "#         else:\n",
-    "#             print(\"Query result is empty.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 0, 1, 0, 2, 2, 3, 0, 1, 0]\n",
+      "[(17, 23), (16, 23), (16, 24), (16, 24), (17, 24), (17, 24), (17, 23), (16, 23), (16, 24), (16, 24)]\n",
+      "[(17, 23), (16, 23), (16, 24), (16, 24), (17, 24), (17, 24), (17, 23), (16, 23), (16, 24), (16, 24)]\n"
+     ]
+    }
+   ],
    "source": [
     "random.seed(42)\n",
     "\n",
@@ -431,9 +431,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(16, 24),\n",
+       " (16, 23),\n",
+       " (16, 24),\n",
+       " (16, 25),\n",
+       " (15, 25),\n",
+       " (16, 25),\n",
+       " (16, 24),\n",
+       " (16, 25),\n",
+       " (17, 25),\n",
+       " (16, 25)]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "path1 = random_nsteps(game_map= game_map.layout, start = game_map.start, target=game_map.target, steps = 10)\n",
     "path1"
@@ -441,9 +461,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 1, 1, 0, 2, 3, 1, 2, 0]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "actions1 = actions_from_path(start = game_map.start, path = path1)\n",
     "actions1"
@@ -451,9 +482,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(16, 24),\n",
+       " (16, 23),\n",
+       " (16, 24),\n",
+       " (16, 25),\n",
+       " (15, 25),\n",
+       " (16, 25),\n",
+       " (16, 24),\n",
+       " (16, 25),\n",
+       " (17, 25),\n",
+       " (16, 25)]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "path2 = path_from_actions(game_map= game_map.layout, start = game_map.start, actions = actions1)\n",
     "path2"
@@ -461,15 +512,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300\n",
+      "[1, 1, 1, 0, 3, 0, 0, 2, 0, 1, 0, 2, 0, 2, 3, 2, 0, 1, 0, 3, 3, 3, 3, 0, 0, 2, 0, 2, 2, 0, 2, 0, 0, 3, 0, 2, 0, 0, 2, 2, 0, 1, 3, 1, 2, 2, 3, 1, 3, 1, 0, 0, 3, 0, 2, 1, 3, 1, 2, 2, 2, 1, 1, 1, 2, 2, 2, 1, 2, 0, 2, 2, 1, 0, 2, 3, 0, 0, 2, 1, 3, 2, 3, 3, 1, 0, 3, 2, 3, 3, 3, 1, 0, 3, 2, 1, 0, 3, 2, 0, 0, 2, 0, 2, 0, 2, 2, 1, 3, 0, 0, 0, 2, 0, 2, 2, 1, 3, 0, 2, 1, 3, 0, 0, 1, 1, 3, 3, 2, 2, 0, 2, 0, 0, 2, 2, 2, 0, 0, 2, 1, 1, 1, 3, 1, 1, 2, 1, 3, 0, 1, 0, 1, 3, 3, 1, 3, 0, 2, 2, 1, 1, 3, 0, 3, 0, 2, 0, 0, 1, 0, 3, 2, 2, 2, 1, 2, 2, 0, 0, 2, 1, 3, 1, 2, 3, 3, 3, 0, 2, 3, 3, 3, 1, 0, 2, 0, 3, 1, 3, 2, 1, 1, 0, 1, 2, 3, 3, 1, 3, 1, 1, 0, 2, 0, 3, 3, 3, 2, 1, 3, 0, 1, 2, 0, 3, 2, 1, 0, 2, 1, 3, 1, 1, 0, 1, 1, 0, 1, 3, 1, 2, 3, 0, 2, 2, 1, 3, 0, 0, 3, 2, 0, 0, 0, 2, 2, 0, 0, 0, 2, 0, 1, 3, 1, 2, 3, 2, 0, 0, 2, 2, 2, 2, 3, 2, 0, 1, 2, 1, 0, 1, 2, 0, 3, 0, 3, 1, 3, 1, 3, 2, 0, 0, 2, 2, 3, 1, 1, 0]\n"
+     ]
+    }
+   ],
    "source": [
     "# generating a full valid random path to feed at the first generation\n",
     "starting_path = random_nsteps(game_map= game_map.layout, start = game_map.start, target=game_map.target, steps = 300)\n",
     "starting_actions = actions_from_path(start = game_map.start, path = starting_path)\n",
     "print(len(starting_actions))\n",
     "print(starting_actions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "actions = n_random_valid_actions_kb(start = game_map.start, target=game_map.target, steps = 300, KB = KB)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "path = path_from_actions_kb(game_map= game_map.layout, start = game_map.start, actions = actions, KB = KB)\n",
+    "w = wrong_actions(path=path)\n",
+    "print(w)"
    ]
   },
   {
