--- a/project/main.ipynb
+++ b/project/main.ipynb
@@ -769,7 +769,7 @@
     "\n",
     "### Informed mutations\n",
     "\n",
-    "In order to improve the performance of the standard genetic algorithm, we decided to implement a new mutation operator. In particular, this operator will take KB-generated bitmaps of the errors made by the parents, in order to prevent the offspring from making the same mistakes. Bitmaps are vectors of 0s and 1s. Given a generic error bitmap $k$, the $i$ th $k_i$ component is set to 1 if the best individual in the previous generation made an error in the $i$ th cell of the maze. \n",
+    "In order to improve the performance of the standard genetic algorithm, we decided to implement a new mutation operator. In particular, this operator will take KB-generated bitmaps of the errors made by the parents, in order to prevent the offspring from making the same mistakes. Bitmaps are vectors of 0s and 1s. Given a generic error bitmap $k$, the $i$ th $k_i$ component is set to 1 if the best individual in the previous generation made an error in the $i$ th action of its path. \n",
     "\n",
     "We consider in particular three kind of errors:\n",
     "- Loops: the agent goes back to a cell that it has already visited\n",
