--- a/project/main.ipynb
+++ b/project/main.ipynb
@@ -781,6 +781,26 @@
     "$$ p_i = \\frac{e^{b_i}}{\\sum_{j=1}^{n} e^{b_j}}$$\n",
     "where $p_i$ is the probability of mutating the $i$ th component of the new individuals.\n",
     "\n",
+    "Code for the `softmax_mutate()` method is the following:\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "def softmax_mutate(actions, error_vector: np.ndarray, mutation_rate=0.8, generation=0, max_generations=1000, decay = True) -> List[int]:\n",
+    "    length        = len(actions)\n",
+    "    error_vector  = np.copy(error_vector)\n",
+    "    num_mutations = np.random.binomial(length, mutation_rate)\n",
+    "    if decay: \n",
+    "        num_mutations = linear_decay(generation, max_generations) * num_mutations\n",
+    "\n",
+    "    for _ in range(int(num_mutations)):\n",
+    "        i = np.random.choice(length, p=softmax(error_vector))\n",
+    "        actions[i] = np.random.choice(actions_set)\n",
+    "        error_vector[i] = 0\n",
+    "\n",
+    "    return actions\n",
+    "\n",
+    "```\n",
+    "\n",
     "\n",
     "### Python implementation\n",
     "\n",
