modified experiments code

--- a/project/main.ipynb
+++ b/project/main.ipynb
@@ -1279,11 +1279,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "We can observe that the informed manhattan fitness function doesn't improve that much with respect to the simple manhattan distance, while with the dynamic fitness function we assist to an improvement of the quality of the paths in terms of loops and wrong actions.\n",
+    "\n",
+    "#TODO: verificare queste affermazioni e fare qualche commento sul fatto che manhattand distance arriva a 0, informed manhattan arriva a -5 tipo e l'altra a -100 tipo"
+   ]
   },
   {
    "cell_type": "code",
