added folder for things used for the  december presentation

--- a/project/december_presentation/presentation.ipynb
+++ b/project/december_presentation/presentation.ipynb
@@ -181,7 +181,7 @@
     "        ims.append([im, ttl])\n",
     "        \n",
     "    except RuntimeError:\n",
-    "        print(\"YOU WON! <3\")\n",
+    "        print(\"YOU WON!\")\n",
     "\n",
     "ani = animation.ArtistAnimation(fig, ims, interval=500, blit=False,\n",
     "                                repeat_delay=200)\n",
@@ -243,7 +243,7 @@
     "        im = plt.imshow(s[\"pixel\"][112:220, 545:687])\n",
     "        ims.append([im, ttl])\n",
     "    except RuntimeError:\n",
-    "        print(\"YOU WON! <3\")\n",
+    "        print(\"YOU WON!\")\n",
     "\n",
     "ani = animation.ArtistAnimation(fig, ims, interval=500, blit=False,\n",
     "                                repeat_delay=200)\n",
@@ -310,19 +310,12 @@
     "        im = plt.imshow(s[\"pixel\"][112:220, 545:687])\n",
     "        ims.append([im, ttl])\n",
     "    except RuntimeError:\n",
-    "        print(\"YOU WON! <3\")\n",
+    "        print(\"YOU WON!\")\n",
     "\n",
     "ani = animation.ArtistAnimation(fig, ims, interval=500, blit=False,\n",
     "                                repeat_delay=200)\n",
     "ani.save(\"wrong.gif\", writer='help')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
