--- a/project/main.ipynb
+++ b/project/main.ipynb
@@ -49,17 +49,25 @@
    "metadata": {},
    "source": [
     "# Introduction\n",
-    "Write about the problem setting: solve a maze \n",
-    "- Partially Observable 🔍 🤓\n",
-    "- Discrete 🧩\n",
-    "- Non-Episodic (Sequential) ⏩\n",
-    "- Single Agent, Non-Adversarial \n",
-    "- Deterministic 🔒\n",
-    "- Static finite map: start and target coordinates are fixed 🏁\n",
+    "In this notebook we will see how to solve a maze using a genetic algorithm empowered with a knowledge base. \n",
     "\n",
-    "Talk about what we want to achieve.\n",
+    "In particular, we will work in the NetHack game environment using a game map designed by us, which is considered solved if the agent manages to reach the stairs. Later, we will aim to reach the goal with an \"intelligent\" path, i.e., with few loops and repeated actions. \n",
     "\n",
-    "...sistemare"
+    "Let's now list the properties of our setting to get a clearer idea:\n",
+    "- Partially observable \n",
+    "- Discrete \n",
+    "- Non-episodic (Sequential) \n",
+    "- Single agent, Non-adversarial \n",
+    "- Deterministic \n",
+    "- Static finite map: start and target coordinates are fixed \n",
+    "\n",
+    "The notebook is structured as follows:\n",
+    "\n",
+    "1. We will support the genetic algorithm with logical rules that will enhance its decisions. We will use the Prolog language for this part, providing pilot examples and a brief description of the functions used (for further details please refer to the documentation: https://www.swi-prolog.org/). \n",
+    "\n",
+    "2. Subsequently, we will go into the details of the genetic algorithm we will use and how the knowledge base will come into play compared to the classical approach. \n",
+    "\n",
+    "3. Finally, we will report and discuss some experiments we have run with the code in the run_experiments.py file."
    ]
   },
   {
@@ -108,7 +116,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# minihack env creation with a .des file"
+    "# Minihack env creation with a .des file\n",
+    "\n",
+    "Let's proceed with plotting our maze; as you can see, we start the agent from an unfavorable position with respect to the target: the stairs at the top right."
    ]
   },
   {
@@ -141,25 +151,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# s,_,_,_ = env.step(0)\n",
-    "\n",
-    "# plt.imshow(s[\"pixel\"], aspect=\"auto\").set_data(s[\"pixel\"][:, 300:950])  # type: ignore\n",
-    "\n",
-    "# print(get_player_location(s[\"chars\"]))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Map bitmap as KB\n",
-    "\n",
-    "once we have created the map through the .des settings, we will create an object Map with all the basic information required by our agent"
+    "Once we have created the map through the .des settings, we can create an object Map() with all the basic information required by our agent."
    ]
   },
   {
@@ -182,7 +178,7 @@
    "source": [
     "During the creation of the Map() object, we will process a bitmap of the maze that will be used as our initial Knowledge.\n",
     "\n",
-    "We will print the bitmap to visualize it. Invalid cells (walls, void) will be rapresented by 1 in the bitmap and will be printed white. Valid cells will be rapresented by 0 and be black in the followinf image."
+    "We will print the bitmap to visualize it: invalid cells (i.e., walls, void) will be rapresented by 1 in the bitmap and will be printed in white; on the other hand, valid cells will be rapresented by 0 and will be black in the following image."
    ]
   },
   {
@@ -220,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we assert the information to our KB"
+    "Then, we assert the information to our KB."
    ]
   },
   {
@@ -257,18 +253,20 @@
     "```prolog\n",
     "nth1(Index, List, Element)\n",
     "```\n",
-    "Index: The index of the element you want to access.\n",
+    "- <ins>Index</ins>: The index of the element you want to access.\n",
     "\n",
-    "List: The list from which you want to access the element.\n",
+    "- <ins>List</ins>: The list from which you want to access the element.\n",
     "\n",
-    "Element: The variable that will be unified with the element at the specified index."
+    "- <ins>Element</ins>: The variable that will be unified with the element at the specified index."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will use nth1 to control the validity of a specific position of the maze though Prolog, to assert if a specific cell is valid or not. This will be also used later to check for valid actions."
+    "We will use `nth1` to control the validity of a specific position of the maze though Prolog, to assert if a specific cell is valid or not. This will be also used later to check for valid actions.\n",
+    "\n",
+    "In the following cell we can test this function on our maze to check if the position (17,24) is valid."
    ]
   },
   {
@@ -306,22 +304,22 @@
    "source": [
     "# Findall\n",
     "\n",
-    "In Prolog, findall/3 is a built-in predicate that is used to find all solutions to a query and collect them into a list. The general form of the findall/3 predicate is:\n",
+    "In Prolog, `findall/3` is a built-in predicate that is used to find all solutions to a query and collect them into a list. The general form of the `findall/3` predicate is:\n",
     "\n",
     "```Prolog\n",
     "findall(+Template, +Goal, -Bag)\n",
     "```\n",
     "\n",
-    "Template: It represents a template for the solutions. The variables in the template are instantiated with the values of the corresponding variables in the solutions.\n",
+    "- <ins>Template</ins>: It represents a template for the solutions. The variables in the template are instantiated with the values of the corresponding variables in the solutions.\n",
     "\n",
-    "Goal: It is a goal (query) to be satisfied. findall/3 collects all solutions to this goal.\n",
+    "- <ins>Goal</ins>: It is a goal (query) to be satisfied. findall/3 collects all solutions to this goal.\n",
     "\n",
-    "Bag: It is the list that will contain all the solutions found.\n",
+    "- <ins>Bag</ins>: It is the list that will contain all the solutions found.\n",
     "\n",
     "\n",
-    "We then rename Actions to ValidActions using the Prolog function intersection(+Set1, +Set2, -Set3).\n",
+    "We then rename Actions to ValidActions using the Prolog function `intersection(+Set1, +Set2, -Set3)`.\n",
     "\n",
-    "N.B.  the search is done for Action = 0,1,2,3 since in kb.pl 'is_valid_action' is constructed from action_to_coordinates which gives these 4 values for Action."
+    "<ins>N.B</ins>.  The search is done for Action = 0,1,2,3 since in the file kb.pl the function 'is_valid_action' is constructed from 'action_to_coordinates', which gives these 4 values for Action."
    ]
   },
   {
@@ -2131,7 +2129,8 @@
    "metadata": {},
    "source": [
     "# Bibliography\n",
-    "# TODO: aima "
+    "- aima \n",
+    "- https://www.swi-prolog.org/"
    ]
   }
  ],
