cleared the kb part of the nb

--- a/project/main.ipynb
+++ b/project/main.ipynb
@@ -72,9 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -82,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -361,27 +370,6 @@
     "# Here we print just ValidActions\n",
     "valid_actions_result = results[0]['ValidActions'] # type: ignore\n",
     "print(valid_actions_result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# We check with the NON-PROLOG function if the result is correct\n",
-    "get_valid_actions(game_map.layout,  (row, col))"
    ]
   },
   {
@@ -409,122 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 0, 1, 0, 2, 2, 3, 0, 1, 0]\n",
-      "[(17, 23), (16, 23), (16, 24), (16, 24), (17, 24), (17, 24), (17, 23), (16, 23), (16, 24), (16, 24)]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(17, 23), (16, 23), (16, 24), (16, 24), (17, 24), (17, 24), (17, 23), (16, 23), (16, 24), (16, 24)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "random.seed(42)\n",
-    "\n",
-    "actions = random_nactions(10)\n",
-    "print(actions)\n",
-    "\n",
-    "path = path_from_actions(game_map= game_map.layout, start = game_map.start, actions = actions)\n",
-    "print(path)\n",
-    "\n",
-    "path_kb = path_from_actions_kb(game_map= game_map.layout, start = game_map.start, actions = actions, KB = KB)\n",
-    "print(path_kb)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(16, 24),\n",
-       " (16, 23),\n",
-       " (16, 24),\n",
-       " (16, 25),\n",
-       " (15, 25),\n",
-       " (16, 25),\n",
-       " (16, 24),\n",
-       " (16, 25),\n",
-       " (17, 25),\n",
-       " (16, 25)]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "path1 = random_nsteps(game_map= game_map.layout, start = game_map.start, target=game_map.target, steps = 10)\n",
-    "path1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 3, 1, 1, 0, 2, 3, 1, 2, 0]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "actions1 = actions_from_path(start = game_map.start, path = path1)\n",
-    "actions1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(16, 24),\n",
-       " (16, 23),\n",
-       " (16, 24),\n",
-       " (16, 25),\n",
-       " (15, 25),\n",
-       " (16, 25),\n",
-       " (16, 24),\n",
-       " (16, 25),\n",
-       " (17, 25),\n",
-       " (16, 25)]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "path2 = path_from_actions(game_map= game_map.layout, start = game_map.start, actions = actions1)\n",
-    "path2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +405,7 @@
      "output_type": "stream",
      "text": [
       "300\n",
-      "[1, 1, 1, 0, 3, 0, 0, 2, 0, 1, 0, 2, 0, 2, 3, 2, 0, 1, 0, 3, 3, 3, 3, 0, 0, 2, 0, 2, 2, 0, 2, 0, 0, 3, 0, 2, 0, 0, 2, 2, 0, 1, 3, 1, 2, 2, 3, 1, 3, 1, 0, 0, 3, 0, 2, 1, 3, 1, 2, 2, 2, 1, 1, 1, 2, 2, 2, 1, 2, 0, 2, 2, 1, 0, 2, 3, 0, 0, 2, 1, 3, 2, 3, 3, 1, 0, 3, 2, 3, 3, 3, 1, 0, 3, 2, 1, 0, 3, 2, 0, 0, 2, 0, 2, 0, 2, 2, 1, 3, 0, 0, 0, 2, 0, 2, 2, 1, 3, 0, 2, 1, 3, 0, 0, 1, 1, 3, 3, 2, 2, 0, 2, 0, 0, 2, 2, 2, 0, 0, 2, 1, 1, 1, 3, 1, 1, 2, 1, 3, 0, 1, 0, 1, 3, 3, 1, 3, 0, 2, 2, 1, 1, 3, 0, 3, 0, 2, 0, 0, 1, 0, 3, 2, 2, 2, 1, 2, 2, 0, 0, 2, 1, 3, 1, 2, 3, 3, 3, 0, 2, 3, 3, 3, 1, 0, 2, 0, 3, 1, 3, 2, 1, 1, 0, 1, 2, 3, 3, 1, 3, 1, 1, 0, 2, 0, 3, 3, 3, 2, 1, 3, 0, 1, 2, 0, 3, 2, 1, 0, 2, 1, 3, 1, 1, 0, 1, 1, 0, 1, 3, 1, 2, 3, 0, 2, 2, 1, 3, 0, 0, 3, 2, 0, 0, 0, 2, 2, 0, 0, 0, 2, 0, 1, 3, 1, 2, 3, 2, 0, 0, 2, 2, 2, 2, 3, 2, 0, 1, 2, 1, 0, 1, 2, 0, 3, 0, 3, 1, 3, 1, 3, 2, 0, 0, 2, 2, 3, 1, 1, 0]\n"
+      "[1, 3, 1, 1, 0, 2, 3, 1, 2, 0, 1, 1, 0, 3, 1, 2, 3, 2, 1, 0, 2, 0, 3, 3, 0, 1, 2, 3, 0, 2, 3, 1, 1, 1, 2, 0, 0, 2, 2, 3, 1, 3, 0, 0, 3, 0, 2, 0, 2, 2, 3, 1, 2, 3, 1, 1, 1, 3, 1, 3, 1, 0, 0, 1, 3, 1, 0, 1, 3, 1, 2, 1, 1, 0, 1, 1, 2, 2, 0, 0, 2, 0, 2, 0, 2, 0, 2, 2, 0, 0, 2, 2, 2, 1, 3, 3, 1, 0, 2, 1, 3, 3, 3, 3, 3, 1, 3, 1, 3, 1, 3, 1, 3, 1, 3, 1, 1, 3, 1, 1, 1, 0, 0, 2, 2, 0, 0, 2, 0, 2, 1, 1, 2, 3, 0, 3, 1, 3, 0, 2, 1, 3, 0, 0, 2, 2, 0, 2, 0, 2, 0, 0, 0, 2, 3, 1, 0, 2, 2, 2, 0, 2, 0, 2, 1, 2, 3, 0, 0, 0, 0, 2, 3, 1, 2, 2, 0, 2, 2, 0, 0, 2, 2, 0, 0, 2, 1, 2, 1, 3, 1, 3, 3, 1, 1, 0, 0, 0, 1, 3, 1, 3, 2, 0, 2, 2, 3, 1, 2, 3, 3, 3, 3, 3, 1, 1, 3, 3, 1, 3, 3, 1, 3, 1, 1, 1, 1, 0, 0, 0, 3, 1, 3, 1, 3, 1, 2, 2, 1, 1, 3, 3, 2, 3, 3, 3, 1, 1, 1, 1, 0, 3, 2, 3, 3, 1, 1, 3, 1, 1, 1, 0, 0, 0, 2, 2, 0, 2, 0, 0, 1, 3, 1, 1, 1, 0, 2, 3, 3, 1, 1, 3, 3, 1, 3, 1, 1, 3, 3, 1, 1, 3, 1, 3, 1, 3, 3, 3, 1, 1]\n"
      ]
     }
    ],
@@ -546,16 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "actions = random_nvalid_actions_kb(start = game_map.start, target=game_map.target, steps = 300, KB = KB)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +431,7 @@
     }
    ],
    "source": [
-    "\n",
+    "actions = random_nvalid_actions_kb(start = game_map.start, target=game_map.target, steps = 300, KB = KB)\n",
     "path = path_from_actions_kb(game_map= game_map.layout, start = game_map.start, actions = actions, KB = KB)\n",
     "w = wrong_actions(path=path)\n",
     "print(w)"
